Fixed theme option alignment issue

--- a/core/includes/theme-options/theme-options.css
+++ b/core/includes/theme-options/theme-options.css
@@ -191,8 +191,7 @@ h4.sub-title
 
 .rwd-container .rwd-block input[type=text]
 {
-	display: block;
-}
+	display: block}
 
 
 .js .rwd-container
@@ -296,7 +295,7 @@ h4.sub-title
 	padding: 5px 15px;
 	margin-right: 5px;
 	margin-bottom: 10px;
-	background: 0 0;
+	background: 0;
 	background-color: #333;
 	border-color: transparent;
 	box-shadow: none;
@@ -508,17 +507,27 @@ ul.error-list
 
 .responsivepro-offer
 {
-	font-size:16px;
-        padding-bottom: 1%;
-}
+	font-size: 16px;
+	padding-bottom: 1%}
+
+
 .coupon-code
 {
-color: #e9f253;
+	color: #e9f253}
+
+
+p
+{
+	font-size: 14px}
+
+
+.description
+{
+	padding: 5px 0;
+	display: block;
+	color: #999}
+
+
+.sky-tabs ul li .grid {
+	margin-bottom: 2%;
 }
-p{
-font-size: 14px;
-}
-.description {
- padding: 5px 0px; display: block; color : #999;
-}
-.sky-tabs ul li .col-300 {margin-bottom: 2%}
